--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <developers>
         <developer>
             <name>Taras Kovaliv</name>
-            <email>taraskovaliv@outlook.com</email>
+            <email>taras@kovaliv.dev</email>
         </developer>
     </developers>
 
